portfolio-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: portfolio-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: portfolio

  template:
    metadata:
      labels:
        app: portfolio

    spec:
      containers:
      - name: portfolio

        image: portfolio:v1

        imagePullPolicy: Never

        ports:
        - containerPort: 80
