portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: portfolio.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: portfolio-service

            port:
              number: 80
